PLA-833 title overflow fixes

--- a/extensions/wikia/Suggestions/css/Suggestions.scss
+++ b/extensions/wikia/Suggestions/css/Suggestions.scss
@@ -153,7 +153,8 @@ $image-width: 55px;
 		display: block;
 		float: left;
 		font-size: 14px;
-		height: 40px;
+		height: 34px;
+		line-height: 17px;
 		overflow: hidden;
 		width: 295px;
 	}
